# cmake_shape

./: CMakeLists.txt  equilateralTriangle.h  figure.h  isoscelesTriangle.h  parallelogram.h  quadrilateral.cpp  quadrilateral.h  rectangle.h  rhomb.h  rightAnglesTriangle.h  source.cpp  square.h  triangle.cpp  triangle.h
